2011-03-27  Ben Taylor  <bentaylor.solx86@gmail.com>

        Reviewed by Alexey Proskuryakov.

        https://bugs.webkit.org/show_bug.cgi?id=57170  Fix last elements
        in an enum to remove a trailing comma. Sun Studio 12 CC errors out.

        Compile fix only, no actual code change.

        * dom/ExceptionCode.h:
        * editing/EditorInsertAction.h:
        * loader/FrameLoaderTypes.h:
        * platform/PlatformKeyboardEvent.h:
        * platform/ScrollTypes.h:
        * platform/graphics/BitmapImage.h:
        * platform/image-decoders/ImageDecoder.h:
        * platform/network/ProtectionSpace.h:
        * platform/network/ResourceHandleClient.h:
        * platform/network/ResourceRequestBase.h:
        * platform/text/TextCodec.h:

2011-03-27  Rob Buis  <rwlbuis@gmail.com>

        Reviewed by Nikolas Zimmermann.

        Text on path positioning at zero startOffset
        https://bugs.webkit.org/show_bug.cgi?id=56245

        Since for length 0 no previous point is set, choose epsilon
        length to get normal at starting point of the path.

        Test: svg/text/text-path-middle-align.svg

        * platform/graphics/Path.cpp:
        (WebCore::Path::normalAngleAtLength):

2011-03-27  Ben Taylor  <bentaylor.solx86@gmail.com>

        Reviewed by Oliver Hunt.

        https://bugs.webkit.org/show_bug.cgi?id=57151, patch derived from set
        created by Thiago Macieria in bug https://bugs.webkit.org/show_bug.cgi?id=24932

        Fix compile issue on Solaris 10/Sun Studio 12 regarding ambiguity on ?: functions

        * bindings/js/JSJavaScriptCallFrameCustom.cpp:
        (WebCore::JSJavaScriptCallFrame::thisObject):

2011-03-26  Jer Noble  <jer.noble@apple.com>

        Unreviewed build fix.

        Fix a bug which was causing the "skip back" button to be missing, causing 
        the media layout tests to fail.

        * rendering/RenderThemeMac.mm:
        (WebCore::RenderThemeMac::shouldRenderMediaControlPart):
